feature3: logo was added to index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 		<section>
 			<img src="Trending3.png" alt="Trending things" />
 		</section>
+		<section>
+			<img src="logo.png" alt="vue js logo" />
+		</section>
 	</main>
 
 </html>
